unpackaged/main/default/objects/Opportunity/fields/ActualAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount__c</fullName>
    <label>Сумма прихода денег</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>