unpackaged/main/default/objects/Opportunity/fields/approval__c.field-meta.xml
<CustomField>
    <fullName>approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>approval</label>
    <type>Checkbox</type>
</CustomField>