unpackaged/main/default/objects/Opportunity/fields/AuctionDateDesign__c.field-meta.xml
<CustomField>
    <fullName>AuctionDateDesign__c</fullName>
    <label>Дата конкурса на проектирование</label>
    <type>Date</type>
</CustomField>