unpackaged/main/default/objects/Opportunity/fields/AuctionDateMounting__c.field-meta.xml
<CustomField>
    <fullName>AuctionDateMounting__c</fullName>
    <label>Дата конкурса на монтаж</label>
    <type>Date</type>
</CustomField>