unpackaged/main/default/objects/Opportunity/fields/AuctionLinkDesign__c.field-meta.xml
<CustomField>
    <fullName>AuctionLinkDesign__c</fullName>
    <label>Конкурс на проектирование (госзакупки)</label>
    <type>Url</type>
</CustomField>