unpackaged/main/default/objects/Opportunity/fields/AuctionLinkMounting__c.field-meta.xml
<CustomField>
    <fullName>AuctionLinkMounting__c</fullName>
    <label>Конкурс на монтаж (госзакупки)</label>
    <type>Url</type>
</CustomField>