unpackaged/main/default/objects/Opportunity/fields/AuctionNameDesign__c.field-meta.xml
<CustomField>
    <fullName>AuctionNameDesign__c</fullName>
    <label>Наименование конкурса на проектирование</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>