unpackaged/main/default/objects/Opportunity/fields/AuctionNameMounting__c.field-meta.xml
<CustomField>
    <fullName>AuctionNameMounting__c</fullName>
    <label>Наименование конкурса на монтаж</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>