unpackaged/main/default/objects/Opportunity/fields/DaysFromLastStageUpdated__c.field-meta.xml
<CustomField>
    <fullName>DaysFromLastStageUpdated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Дней с последнего изменения этапа</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>