unpackaged/main/default/objects/Opportunity/fields/DesignAuctionNumber__c.field-meta.xml
<CustomField>
    <fullName>DesignAuctionNumber__c</fullName>
    <label>Номер конкурса на проектирование</label>
    <length>128</length>
    <type>Text</type>
</CustomField>