unpackaged/main/default/objects/Opportunity/fields/ExternalProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ExternalProjectCode__c</fullName>
    <displayFormat>N{0000}</displayFormat>
    <label>Внешний код проекта</label>
    <type>AutoNumber</type>
</CustomField>