unpackaged/main/default/objects/Opportunity/fields/HiddenStageNameBeforeApprovalStarts__c.field-meta.xml
<CustomField>
    <fullName>HiddenStageNameBeforeApprovalStarts__c</fullName>
    <label>Этап до процесса утверждения</label>
    <length>128</length>
    <type>Text</type>
</CustomField>