unpackaged/main/default/objects/Opportunity/fields/IsBillPaid__c.field-meta.xml
<CustomField>
    <fullName>IsBillPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Счет оплачен</label>
    <type>Checkbox</type>
</CustomField>