unpackaged/main/default/objects/Opportunity/fields/isClosingRejected__c.field-meta.xml
<CustomField>
    <fullName>isClosingRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Закрытие проекта отклонено</label>
    <type>Checkbox</type>
</CustomField>