unpackaged/main/default/objects/Opportunity/fields/isProblematicProject__c.field-meta.xml
<CustomField>
    <fullName>isProblematicProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Проблемный проект</label>
    <type>Checkbox</type>
</CustomField>