unpackaged/main/default/objects/Opportunity/fields/LastStageUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastStageUpdated__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Временная метка последнего обновления этапа, изменяется автоматически триггером.</description>
    <label>Последнее обновление этапа</label>
    <type>DateTime</type>
</CustomField>