unpackaged/main/default/objects/Opportunity/fields/MountingAuctionNumber__c.field-meta.xml
<CustomField>
    <fullName>MountingAuctionNumber__c</fullName>
    <label>Номер конкурса на монтаж</label>
    <length>128</length>
    <type>Text</type>
</CustomField>