unpackaged/main/default/objects/Opportunity/fields/needProlongation__c.field-meta.xml
<CustomField>
    <fullName>needProlongation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Вспомогательное поле для переходя в процесс утверждения при продлении</description>
    <label>needProlongation</label>
    <type>Checkbox</type>
</CustomField>