unpackaged/main/default/objects/Opportunity/fields/needProlongationText__c.field-meta.xml
<CustomField>
    <fullName>needProlongationText__c</fullName>
    <label>Причина продления</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>