unpackaged/main/default/objects/Opportunity/fields/needSendNotification__c.field-meta.xml
<CustomField>
    <fullName>needSendNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>needSendNotification</label>
    <type>Checkbox</type>
</CustomField>