unpackaged/main/default/objects/Opportunity/fields/needStateReview__c.field-meta.xml
<CustomField>
    <fullName>needStateReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>needStateReview</label>
    <type>Checkbox</type>
</CustomField>