unpackaged/main/default/objects/Opportunity/fields/OpportunityLink__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Связано с проектом</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Сделки</relationshipLabel>
    <relationshipName>OpportunityLink</relationshipName>
    <type>Lookup</type>
</CustomField>