unpackaged/main/default/objects/Opportunity/fields/ProjectProperties__c.field-meta.xml
<CustomField>
    <fullName>ProjectProperties__c</fullName>
    <label>Характеристики проекта</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Статус не ясен</fullName>
                <default>true</default>
                <label>Статус не ясен</label>
            </value>
            <value>
                <fullName>Есть категорийные помещения. Смета маленькая</fullName>
            </value>
            <value>
                <fullName>Есть категорийные помещения. Смета нормальная</fullName>
            </value>
            <value>
                <fullName>Есть категорийные помещения. Стоит Тион</fullName>
            </value>
            <value>
                <fullName>Есть категорийные помещения. Уточнить смету</fullName>
            </value>
            <value>
                <fullName>Нет категорийных помещений</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>