unpackaged/main/default/objects/Opportunity/fields/StartWorkingProducts__c.field-meta.xml
<CustomField>
    <fullName>StartWorkingProducts__c</fullName>
    <label>Дата ввода оборудования в эксплуатацию</label>
    <type>Date</type>
</CustomField>