unpackaged/main/default/objects/Opportunity/fields/UpdatedLast__c.field-meta.xml
<CustomField>
    <fullName>UpdatedLast__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>UpdatedLast</label>
    <type>DateTime</type>
</CustomField>