unpackaged/main/default/objects/Opportunity/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Сотрудник ответственный за Проект</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Возможности</relationshipLabel>
    <relationshipName>mExE</relationshipName>
    <type>Lookup</type>
</CustomField>