unpackaged/main/default/objects/Opportunity/recordTypes/BuildingStageProjectType.recordType-meta.xml
<RecordType>
    <fullName>BuildingStageProjectType</fullName>
    <active>true</active>
    <businessProcess>Тион%2C выбивание конкурентов</businessProcess>
    <label>Объект на монтаж</label>
</RecordType>