unpackaged/main/default/objects/Opportunity/recordTypes/DealProjectType.recordType-meta.xml
<RecordType>
    <fullName>DealProjectType</fullName>
    <active>true</active>
    <businessProcess>Тион%2C прямая продажа</businessProcess>
    <label>Сделка</label>
</RecordType>