unpackaged/main/default/objects/Opportunity/recordTypes/DesignStageProjectType.recordType-meta.xml
<RecordType>
    <fullName>DesignStageProjectType</fullName>
    <active>true</active>
    <businessProcess>Тион%2C базовый процесс продаж</businessProcess>
    <label>Объект на проектирование</label>
</RecordType>