unpackaged/main/default/objects/Opportunity/recordTypes/O2ProjectType.recordType-meta.xml
<RecordType>
    <fullName>O2ProjectType</fullName>
    <active>true</active>
    <businessProcess>Тион%2C продажа О2 дилерам</businessProcess>
    <label>Продажа Тион О2 дилерам</label>
</RecordType>