unpackaged/main/default/objects/Opportunity/recordTypes/ServiceProjectType.recordType-meta.xml
<RecordType>
    <fullName>ServiceProjectType</fullName>
    <active>true</active>
    <businessProcess>Тион%2C продажа услуг сервиса</businessProcess>
    <label>Продажа услуг сервиса</label>
</RecordType>