unpackaged/main/default/objects/Opportunity/listViews/AllMelentevActiveOpportunitiesView.listView-meta.xml
<ListView>
    <fullName>AllMelentevActiveOpportunitiesView</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>AuctionDateDesign__c</columns>
    <columns>ProjectRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и реализовано</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и не реализовано</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто как не профиль</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто как провал</value>
    </filters>
    <filters>
        <field>UserTION__c</field>
        <operation>equals</operation>
        <value>Сергей Мелентьев</value>
    </filters>
    <label>Все активные проекты Мелентьева</label>
    <language>en_US</language>
</ListView>