unpackaged/main/default/objects/Opportunity/listViews/AllProjectsView.listView-meta.xml
<ListView>
    <fullName>AllProjectsView</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ProjectRegion__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>UserTION__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Все проекты</label>
    <language>ru</language>
</ListView>