unpackaged/main/default/objects/Opportunity/listViews/AllSemenihinActiveOpportunitiesView.listView-meta.xml
<ListView>
    <fullName>AllSemenihinActiveOpportunitiesView</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>AuctionDateDesign__c</columns>
    <columns>ProjectRegion__c</columns>
    <columns>UserTION__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и реализовано</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и не реализовано</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто как не профиль,Закрыто как провал</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>notEqual</operation>
        <value>&quot;Детские сады, Школы&quot;,Дома ребенка и детские дома,&quot;Архивы, библиотеки&quot;</value>
    </filters>
    <filters>
        <field>UserTION__c</field>
        <operation>equals</operation>
        <value>Вадим Семенихин</value>
    </filters>
    <label>Все активные проекты Семенихина</label>
    <language>en_US</language>
</ListView>