unpackaged/main/default/objects/Opportunity/listViews/Dimitriev_projects.listView-meta.xml
<ListView>
    <fullName>Dimitriev_projects</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserTION__c</field>
        <operation>equals</operation>
        <value>Сергей Димитриев</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и реализовано,Закрыто и не реализовано,Закрыто как не профиль,Закрыто как провал</value>
    </filters>
    <label>Все активные проекты Димитриева</label>
</ListView>