unpackaged/main/default/objects/Opportunity/listViews/gorshenina_projects.listView-meta.xml
<ListView>
    <fullName>gorshenina_projects</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ProjectRegion__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserTION__c</field>
        <operation>contains</operation>
        <value>Горшенина</value>
    </filters>
    <label>Все проекты Горшениной</label>
    <language>ru</language>
</ListView>