unpackaged/main/default/objects/Opportunity/listViews/Ivarovskaya_active.listView-meta.xml
<ListView>
    <fullName>Ivarovskaya_active</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserTION__c</field>
        <operation>contains</operation>
        <value>Иваровская</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Закрыто и реализовано,Закрыто как не профиль,Закрыто как провал</value>
    </filters>
    <label>Все активные проекты Иваровской</label>
    <language>ru</language>
</ListView>