unpackaged/main/default/objects/Opportunity/listViews/Kapkin_projects.listView-meta.xml
<ListView>
    <fullName>Kapkin_projects</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserTION__c</field>
        <operation>contains</operation>
        <value>Капкин</value>
    </filters>
    <label>Все проекты Капкина</label>
    <language>ru</language>
</ListView>